# MDO-UNESP

./: .gitignore  README.md  bezier_wing.avl  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yml
src/MDO_UNESP/: avl_generator.py  avl_runner.py  bezier_airfoil.py  get_cl_max.py  io_avl.py  plot_airfoils.py
tests/: test_bezier_airfoil.py  test_plot_airfoils.py
