[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "MDO_UNESP"
version = "0.0.1"
authors = [
  { name="Raphael Prizimich de Almeida Gamero Vico", email="r.vico@unesp.br" },
]
description = "Uma descrição curta e incrível da sua biblioteca."
readme = "README.md"
requires-python = ">=3.8"
license = { file="LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    # "numpy>=1.20.0",
    # "requests",
]

[project.urls]
Homepage = "https://github.com/SEU_USUARIO_AQUI/MDO_UNESP"
Issues = "https://github.com/SEU_USUARIO_AQUI/MDO_UNESP/issues"
